uipath-commons/main/default/objects/User/fields/Contact_Account_Id__c.field-meta.xml
<CustomField>
        <fullName>Contact_Account_Id__c</fullName>
        <formula>Contact.Account.Id</formula>
        <label>Contact Account Id</label>
        <type>Text</type>
    </CustomField>