uipath-commons/main/default/objects/User/fields/Region_Territory__c.field-meta.xml
<CustomField>
        <fullName>Region_Territory__c</fullName>
        <label>Region (Territory)</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>