uipath-commons/main/default/objects/User/fields/User_Geo__c.field-meta.xml
<CustomField>
        <fullName>User_Geo__c</fullName>
        <label>User Geo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>