uipath-commons/main/default/objects/User/fields/User_ID_long__c.field-meta.xml
<CustomField>
        <fullName>User_ID_long__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User ID long</label>
        <type>Text</type>
    </CustomField>