uipath-commons/main/default/objects/User/fields/User_Region__c.field-meta.xml
<CustomField>
        <fullName>User_Region__c</fullName>
        <formula>if(CONTAINS(&#39;#AF#AM#AU#AZ#BD#BH#BN#BT#CC#CK#CN#CX#FJ#ID#IO#IQ#IR#JO#KG#HK#KI#KP#KR#KW#KZ#LA#LK#MM#MN#MO#MV#MY#NC#NF#NP#NR#NU#NZ#PF#PG#PH#PN#PS#SB#SG#SY#TH#TJ#TK#TL#TM#TO#TV#TW#UZ#VN#VU#WF#WS#YE#&#39;, &#39;#&#39;+ TEXT(CountryCode) + &#39;#&#39;), &quot;APAC&quot;,
if(CONTAINS(&#39;#JP#&#39;, &#39;#&#39;+ TEXT(CountryCode) + &#39;#&#39;), &quot;Japan&quot;,  
if(CONTAINS(&#39;#IN#&#39;, &#39;#&#39;+ TEXT(CountryCode) + &#39;#&#39;), &quot;India&quot;,
if(CONTAINS(&#39;#AD#AL#AO#AT#AX#BA#BE#BF#BG#BI#BJ#BW#BY#CD#CF#CG#CH#CI#CM#CV#CW#CZ#DE#DJ#DK#DZ#EE#EG#EH#ER#ES#ET#FI#FO#FR#GA#GB#GG#GH#GI#GM#GN#GQ#GR#GW#HR#HU#IE#IM#IS#IT#JE#KE#KM#LI#LR#LS#LT#LU#LV#LY#MA#MC#MD#ME#MG#MK#ML#MR#MT#MU#MW#MZ#NA#NE#NG#NL#NO#PL#PT#RE#RO#RS#RU#RW#SC#SD#SE#SH#SI#SJ#SK#SL#SM#SN#SO#ST#SZ#LB#TD#TG#TN#TR#TZ#UA#UG#VA#YT#ZA#ZM#ZW#PK#SA#IL#AE#OM#QA#CY#GE#&#39;, &#39;#&#39;+ TEXT(CountryCode) + &#39;#&#39;), &quot;EMEA&quot;, if(CONTAINS(&#39;#AG#AI#AW#BB#BL#BM#BS#BZ#CA#CR#CU#DM#DO#GD#GL#GP#GT#HN#HT#JM#KN#KY#LC#MF#MQ#MS#MX#NI#PA#PM#SV#SX#TC#TT#US#VC#VG#&#39;, &#39;#&#39;+ TEXT(CountryCode) + &#39;#&#39;), &quot;NAMER&quot;, if(CONTAINS(&#39;#AQ#AR#BO#BQ#BR#BV#CL#CO#EC#FK#GF#GS#GY#HM#PE#PY#SR#SS#TF#UY#VE#&#39;, &#39;#&#39;+ TEXT(CountryCode) + &#39;#&#39;), &quot;SAMER&quot;,&quot;Unknown&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Region</label>
        <type>Text</type>
    </CustomField>